<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/visualLinearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <Switch
            android:id="@+id/switchEnable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_equalizer" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearLayoutEqual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingBottom="16dp"
        >

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/centerFreq0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <SeekBar
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:rotation="270"
                android:id="@+id/mySeekBar0"
                />


        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/centerFreq1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <SeekBar
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:rotation="270"
                android:id="@+id/mySeekBar1"/>


        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/centerFreq2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <SeekBar
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:rotation="270"
                android:id="@+id/mySeekBar2"/>


        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/centerFreq3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <SeekBar
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:rotation="270"
                android:layout_gravity="center"
                android:id="@+id/mySeekBar3"/>


        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/centerFreq4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <SeekBar
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:rotation="270"
                android:id="@+id/mySeekBar4"/>


        </android.support.v7.widget.LinearLayoutCompat>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="48dp"
        android:paddingLeft="48dp"
        android:id="@+id/presetView"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/presets"
            android:layout_marginLeft="16dp"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>


    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="32dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <com.marcinmoskala.arcseekbar.ArcSeekBar
                android:layout_width="100dp"
                android:layout_height="60dp"
                app:thumb="@drawable/thumb2"
                app:progressBackgroundColor="@color/progress_gray"
                app:progressColor="@color/colorAccent"
                android:id="@+id/bassSeekBar"/>

            <Switch
                android:id="@+id/bassSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/bass_boost"
                android:textColor="#000000"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/loudnessView">

            <com.marcinmoskala.arcseekbar.ArcSeekBar
                android:layout_width="100dp"
                android:layout_height="60dp"
                app:thumb="@drawable/thumb2"
                app:progressBackgroundColor="@color/progress_gray"
                app:progressColor="@color/colorAccent"
                android:id="@+id/volSeekBar"/>

            <Switch
                android:id="@+id/volSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/volTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/loudness"
                android:textColor="#000000"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <com.marcinmoskala.arcseekbar.ArcSeekBar
                android:layout_width="100dp"
                android:layout_height="60dp"
                app:thumb="@drawable/thumb2"
                app:progressBackgroundColor="@color/progress_gray"
                app:progressColor="@color/colorAccent"
                android:id="@+id/virtualSeekBar"/>
            <Switch
                android:id="@+id/virtualSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/virtualizer"
                android:textColor="#000000"
                />


        </LinearLayout>
    </LinearLayout>




</LinearLayout>

</RelativeLayout>



